# snippets

.github/workflows/: requirements_test.txt  space.yml  tests.yml
batch_inference/: batch_inference_continuous.py  batch_inference_manual.py  genai_vllm_benchmark.py
compare_embedding_output/: compare.py
debugging/: README.md  vision_embedding_performance.py
embeddings_npu/: README.md  add_normalization.py  convert.py  embedding.cpp  embedding.py  reshape.py
embeddings_npu/cpp/: CMakeLists.txt
embeddings_npu/python/: embedding.py  embedding_batch.py
embeddings_npu/tests/: test_embeddings_npu.py
encrypted_model/: CMakeLists.txt  README.md  infer_encrypted.py  main.cpp
genai_cmakelists/linux/: CMakeLists.txt
genai_cmakelists/windows/: CMakeLists.txt
llm_chat/cpp/: CMakeLists.txt  README.md  llm_chat.cpp
llm_chat/python/: README.md  llm_chat.py  llm_chat_manual.py  llm_chat_optimum.py  llm_test.py
llm_chat_python/: llm_chat.py
model_conversion/: convert_llm_int4_dataset.py
model_info/: README.md  modelinfo.py  modelinfo_all.py
model_quantization/: README.md  quantize_bert_classification.py
non_genai_benchmark/cpp/sync_benchmark/: CMakeLists.txt  README.md  main.cpp
non_genai_benchmark/python/: README.md  benchmark.bat  benchmark.sh  pivot_benchmark.py  sync_benchmark.py  sync_benchmark_hetero.py  throughput_benchmark.py  throughput_benchmark_embeddings.py
openvino_vlm_demo/: README.md  app.py  vlm_inference_genai.py  vlm_inference_optimum.py  vlm_inference_ovms.py  vlm_inference_transformers.py
sentence_transformers_evaluation/: evaluate_st.py
show_properties/: README.md  show_compiled_model_properties.py  show_device_properties.py
utils/: check_npu_driver.ps1  csv2md.py  download_dataset.py  download_nightly.py  download_release.py  extract_4bit_quantization_configs.py  optimum_intel_max_transformers_models.py
visual_language_chat/: CMakeLists.txt  README.md
