cmake_minimum_required(VERSION 3.10)
project(EmbeddingExample)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(OpenVINO REQUIRED)
add_executable(embedding embedding.cpp)
target_link_libraries(embedding PRIVATE openvino::runtime)
if(WIN32)
	    add_definitions(-DWINDOWS_PLATFORM)
endif()
