cmake_minimum_required(VERSION 3.10)
project(GenaiExampleProject)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(OpenVINOGenAI REQUIRED)
add_executable(llm_chat llm_chat.cpp)
target_link_libraries(llm_chat PRIVATE openvino::genai)
if(WIN32)
    add_definitions(-DWINDOWS_PLATFORM)
endif()
